--- a/SigaaBiblio/res/layout-land/activity_menu.xml
+++ b/SigaaBiblio/res/layout-land/activity_menu.xml
@@ -50,6 +50,7 @@
 	        android:background="@drawable/background_azul2"
 	        android:gravity="center"
 	        android:orientation="horizontal"
+	        android:id="@+id/login_header_3"
 	        android:padding="13dp">
 	        
 	        <LinearLayout
