mapsactivity versao marcilio

--- a/SigaaBiblio/res/layout-land/activity_login.xml
+++ b/SigaaBiblio/res/layout-land/activity_login.xml
@@ -2,9 +2,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:id="@+id/login_body" >
 	 <!-- android:background="#2932aa"-->
 	<LinearLayout
+	    android:id="@+id/login_head"
 	    android:layout_width="match_parent"
 	    android:layout_height="wrap_content"
 	    android:background="@drawable/background_azul1"
